traq/telemetry/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traq-telemetry
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traq-tls
  routes:
    - kind: Rule
      match: Host(`q.trap.jp`) && Path(`/telemetry/collect`) && Method(`POST`)
      middlewares:
        - name: traq-telemetry-rate-limit
        - name: traq-telemetry-buffering
        - name: traq-telemetry-path
      services:
        - namespace: alloy
          kind: Service
          name: alloy
          port: 12347
